# ChangeLog for gnome-extra/zenity
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/zenity/ChangeLog,v 1.109 2006/12/21 12:48:07 corsair Exp $

  21 Dec 2006; Markus Rothe <corsair@gentoo.org> zenity-2.16.2.ebuild:
  Stable on ppc64; bug #156662

  18 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org> zenity-2.16.2.ebuild:
  Stable on sparc

  17 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  zenity-2.16.2.ebuild:
  Stable on ppc wrt bug #156662.

  12 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> zenity-2.16.2.ebuild:
  Stable on amd64 wrt bug #156662.

  10 Dec 2006; Andrej Kacian <ticho@gentoo.org> zenity-2.16.2.ebuild:
  Stable on x86, bug #156662.

*zenity-2.16.2 (18 Nov 2006)

  18 Nov 2006; Mart Raudsepp <leio@gentoo.org> -zenity-2.10.1.ebuild,
  -zenity-2.12.1.ebuild, +zenity-2.16.2.ebuild:
  Version bump for translation updates. Clean up old versions

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> zenity-2.14.2.ebuild:
  Stable on Alpha.

*zenity-2.16.1 (12 Oct 2006)

  12 Oct 2006; Mart Raudsepp <leio@gentoo.org> -zenity-2.16.0.ebuild,
  +zenity-2.16.1.ebuild:
  New version for translation updates

  03 Oct 2006; Aron Griffis <agriffis@gentoo.org> zenity-2.16.0.ebuild:
  Mark 2.16.0 ~ia64

  15 Sep 2006; Daniel Gryniewicz <dang@gentoo.org> zenity-2.16.0.ebuild:
  Remove hppa and ia64 until they keyword libnotify

  14 Sep 2006; John N. Laliberte <allanonjl@gentoo.org>
  zenity-2.16.0.ebuild:
  add gnome-common dep, fixes #147548

  13 Sep 2006; Aron Griffis <agriffis@gentoo.org> zenity-2.14.2.ebuild:
  Mark 2.14.2 stable on ia64. #139612

*zenity-2.16.0 (07 Sep 2006)

  07 Sep 2006; Daniel Gryniewicz <dang@gentoo.org>
  +files/zenity-2.15.90-libnotify-support.patch, +zenity-2.16.0.ebuild:
  New version for gnome 2.16

  05 Sep 2006; Joshua Kinard <kumba@gentoo.org> zenity-2.10.1.ebuild,
  zenity-2.12.1.ebuild, zenity-2.14.2.ebuild: