@@ -1,7 +1,9 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/zenity/zenity-2.16.2.ebuild,v 1.6 2006/12/21 12:48:07 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/zenity/zenity-2.16.2.ebuild,v 1.7 2007/01/08 04:13:03 leio Exp $
 
+WANT_AUTOCONF=latest
+WANT_AUTOMAKE=latest
 inherit gnome2 eutils autotools
 
 DESCRIPTION="Tool to display dialogs from the commandline and shell scripts"
