@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/zenity
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/zenity/ChangeLog,v 1.109 2006/12/21 12:48:07 corsair Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/zenity/ChangeLog,v 1.110 2007/01/08 04:13:03 leio Exp $
+
+  08 Jan 2007; Mart Raudsepp <leio@gentoo.org> -zenity-2.16.1.ebuild,
+  zenity-2.16.2.ebuild:
+  QA: Set WANT_AUTO{CONF,MAKE}, bug 160501. Remove a redundant version
 
   21 Dec 2006; Markus Rothe <corsair@gentoo.org> zenity-2.16.2.ebuild:
   Stable on ppc64; bug #156662
